--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <h1>hello</h1> 
-   <p>My name is Tsehay Gormes</p>
-   <img src="photo_2024-01-12_12-28-16.jpg" alt="profile pic">
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <img
+        style="height: 70px; width: auto; border-radius: 100%"
+        src="image/photo_2024-01-12_12-28-16.jpg"
+        alt=""
+      />
+      <ul>
+        <li><a href="">home</a></li>
+        <li><a href="#about">about</a></li>
+        <li><a href="">projects</a></li>
+        <li><a href="">contact</a></li>
+      </ul>
+    </header>
+    <div class="landing">
+      <div class="container">
+        <div class="image">
+          <img
+            class="profile-img"
+            src="/image/photo_2024-01-12_12-28-16.jpg"
+            alt="profile pic"
+          />
+        </div>
+        <div class="description">
+          <h1>hello</h1>
+          <p>My name is <span>Tsehay Gormes</span></p>
+          <button type="button"><a href="#about">wanna know more</a></button>
+        </div>
+      </div>
+    </div>
+    <div class="about" id="about">
+      <div class="description-2">
+        <h class="heading">what i had so far whithin my programming companion</h>
+      <div class="langs">
+        <img class="images" src="/image/Arduino_Logo.svg.png" />
+        <img class="images" src="/image/ISO_C++_Logo.svg.png" />
+        <img
+          class="images"
+          src="/image/LeetCode_Logo_black_with_text.svg.png"
+        />
+        <img class="images" src="/image/Python-logo-notext.svg.png" />
+        <img class="images" ssrc="/image/Tux.svg.png" />
+    </div>
+  </body>
 </html>
