--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="image">
           <img
             class="profile-img"
-            src="/image/photo_2024-01-12_12-28-16.jpg"
+            src="image/photo_2024-01-12_12-28-16.jpg"
             alt="profile pic"
           />
         </div>
@@ -40,14 +40,14 @@
       <div class="description-2">
         <h class="heading">what i had so far whithin my programming companion</h>
       <div class="langs">
-        <img class="images" src="/image/Arduino_Logo.svg.png" />
-        <img class="images" src="/image/ISO_C++_Logo.svg.png" />
+        <img class="images" src="image/Arduino_Logo.svg.png" />
+        <img class="images" src="image/ISO_C++_Logo.svg.png" />
         <img
           class="images"
-          src="/image/LeetCode_Logo_black_with_text.svg.png"
+          src="image/LeetCode_Logo_black_with_text.svg.png"
         />
-        <img class="images" src="/image/Python-logo-notext.svg.png" />
-        <img class="images" ssrc="/image/Tux.svg.png" />
+        <img class="images" src="image/Python-logo-notext.svg.png" />
+        <img class="images" ssrc="image/Tux.svg.png" />
     </div>
   </body>
 </html>
