add script and some editing on css

--- a/index.html
+++ b/index.html
@@ -3,51 +3,122 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tsehay Gormes Portfolio</title>
+    <title>Tsehay Goremes Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="bootstrap-icons.css" />
+    <link rel="stylesheet" href="bootstrap.min.css">
+<link rel="stylesheet" href="animate.min.css">
+<link rel="stylesheet" href="aos.css">
+<link rel="stylesheet" id="theme-link" href="light.css">
+<link rel="stylesheet" href="swiper-bundle.min.css">
+<link rel="stylesheet" href="bootstrap-icons.min.css"><style data-emotion="css-global" data-s=""></style><link rel="stylesheet" type="text/css" href="modal.css" media="all"><style type="text/css" id=""></style>
   </head>
-  <body>
+  <body style="overflow: visible;">
     <header>
-      <img
-        style="height: 70px; width: auto; border-radius: 100%"
-        src="image/photo_2024-01-12_12-28-16.jpg"
-        alt=""
-      />
-      <ul>
-        <li><a href="">home</a></li>
-        <li><a href="#about">about</a></li>
-        <li><a href="">projects</a></li>
-        <li><a href="">contact</a></li>
+      <ul >
+        <li><a href=""><h5>Home</h5></a></li>
+        <li><a href="#about"><h5>My Skill</h5></a></li>
+        <li><a href="#project"><h5>Projects</h5></a></li>
+        <li><a href="#contact"><h5>Contact</h5></a></li>
       </ul>
     </header>
     <div class="landing">
       <div class="container">
-        <div class="image">
-          <img
-            class="profile-img"
-            src="image/photo_2024-01-12_12-28-16.jpg"
-            alt="profile pic"
-          />
+       <div class="col-lg-5 col-md-4 col-sm-12 col-12 text-center">
+            <img loading="lazy" src="image/photo_2024-01-12_12-28-16.jpg" alt="" class="temkin-image shadow d-md-none d-lg-block">
+          
         </div>
         <div class="description">
-          <h1>hello</h1>
-          <p>My name is <span>Tsehay Gormes</span></p>
-          <button type="button"><a href="#about">wanna know more</a></button>
+          <h2>Tsehay Goremes</h2>
+          <p class="text mb-4 fw-bold pt-3">
+          Hey there! 👋 I'm Tsehay Goremes, a Junior backend developer and Dajango.
+          I love working on a challenging and innovative project with a great team.
+          I have been working on fields like Machine Learning.
+          </p>
         </div>
+
+
       </div>
     </div>
-    <div class="about" id="about">
-      <div class="description-2">
-        <h class="heading">what i had so far whithin my programming companion</h>
-      <div class="langs">
-        <img class="images" src="image/Arduino_Logo.svg.png" />
-        <img class="images" src="image/ISO_C++_Logo.svg.png" />
-        <img
-          class="images"
-          src="image/LeetCode_Logo_black_with_text.svg.png"
-        />
-        <img class="images" src="image/Python-logo-notext.svg.png" />
-        <img class="images" ssrc="image/Tux.svg.png" />
-    </div>
+<div class="project" id="project">
+<div class="row justify-content-center pb-5">
+
+  <h3 class="pt-5 text-center mb-5 sub-heading">Projects</h3>
+  <div class="pro">
+    <ul>
+      <li>
+        <p class="text mb-4 fw-bold pt-3">Course Rating With Django frame work
+        <br><br>Cenima Ticketing System
+        <br><br>Soptify Music Recommendation System </p>
+  
+      </li>
+  
+    </ul>
+
+  </div>
+</div>
+</div>
+
+<div class="about" id="about">
+  <div class="description-2">
+    <h3 class="pt-5 text-center mb-5 sub-heading">My Skills</h3>
+  <div class="langs">
+    <ul>
+      <li>
+      <div>
+        <span class="span1">Python</span>
+    <img class="images1" src="image/Python-logo-notext.svg.png" />
+ 
+  </div>
+  <div>
+    <span class="span2">LeetCode</span>
+    <img
+      class="images2"
+      src="image/LeetCode_Logo_black_with_text.svg.png"
+    />
+
+  </div>
+  <div>
+    <span class="span3">Machine-Learning</span>
+    <img class="images3" src="image/machine-learning.png"/>
+    
+  </div>
+  <div>
+    <span class="span4">JavaScript</span>
+    <img class="images4" src="image/java-script.png"/>
+  </div>
+    <div>
+      <span class="span5">Django</span>
+    <img class="images5" src="image/django.png"/>
+  </div>
+  <div>
+    <span class="span6">Database</span>
+
+   <img class="images6" src="image/database-storage.png"/>
+  </div>
+  <div>
+    <span class="span7">Parrot Os | Linux</span>
+  <img class="images7" src="image/Tux.png"/>
+</div>
+</li>
+  </ul>
+</div>
+</div>
+</div>
+<footer class="contact" id="contact">
+<div class="footer1">  <h3 class="pt-5 text-center mb-5 sub-heading">Contact With Me</h3></p></div>
+<div class="social2">
+<a target="_blank" href="https://github.com/Tseehay/" class="mx-5 bi bi-github"><img src="image/logo-github.svg" alt=""></a>
+</div>
+<div class="social3">
+<a target="_blank" href="https://t.me/her_codes" class="mx-5 bi bi-telegram"><img src="image/chatbubble-outline.svg" alt=""></a>
+</div >
+<div class="social4">
+<a target="_blank" href="https://www.linkedin.com/in/tsehay-goremes-934b16222/" class="bi bi-linkedin"><img src="image/logo-linkedin.svg" alt=""></a>
+</div>
+<div class="social5">
+<a target="_blank" href="https://www.youtube.com/@her_codes" class="mx-5 bi bi-youtube"><img src="image/logo-youtube.svg" alt=""></a>
+</div>
+</footer>
   </body>
 </html>
