update css file

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tsehay Goremes Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="bootstrap-icons.css" />
-    <link rel="stylesheet" href="bootstrap.min.css">
-<link rel="stylesheet" href="animate.min.css">
-<link rel="stylesheet" href="aos.css">
+    <!-- <link rel="stylesheet" href="bootstrap-icons.css" />
+    <link rel="stylesheet" href="bootstrap.min.css"> -->
+<!-- <link rel="stylesheet" href="animate.min.css">
+<link rel="stylesheet" href="aos.css">-->
 <link rel="stylesheet" id="theme-link" href="light.css">
-<link rel="stylesheet" href="swiper-bundle.min.css">
+<!-- <link rel="stylesheet" href="swiper-bundle.min.css">
 <link rel="stylesheet" href="bootstrap-icons.min.css"><style data-emotion="css-global" data-s=""></style><link rel="stylesheet" type="text/css" href="modal.css" media="all"><style type="text/css" id=""></style>
-  </head>
+  -->
+</head>
   <body style="overflow: visible;">
     <header>
       <ul >
