add title image

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="ulV4SqGASTBSIFFgUxGoPaVI78K5IU4sektNFtURBiU">
+    <link rel="icon" type="image/svg+xml" href="https://Tseehay.github.io/my_portfoilo/image/photo_2024-01-12_12-28-16.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tsehay Goremes Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="stylesheet" href="bootstrap-icons.css" />
@@ -75,7 +76,7 @@
     <span class="span2">LeetCode</span>
     <img
       class="images2"
-      src="image/LeetCode_Logo_black_with_text.svg.png"
+      src="image/LeetCode_logo_rvs.png"
     />
 
   </div>
