--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="google-site-verification" content="ulV4SqGASTBSIFFgUxGoPaVI78K5IU4sektNFtURBiU">
-    <link rel="icon" type="image/svg+xml" href="https://Tseehay.github.io/my_portfoilo/image/photo_2024-01-12_12-28-16.jpg">
+    <link rel="icon" type="image/svg+xml" href="https://Tseehay.github.io/my_portfoilo/image/sun">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tsehay Goremes Portfolio</title>
     <link rel="stylesheet" href="style.css" />
