--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://Tseehay.github.io/my_portfoilo/image/sun-removebg-preview.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tsehay Goremes Portfolio</title>
+    <script type="module" crossorigin="" src="./Tsehay Goremes Portfolio_files/index.js"></script>
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="stylesheet" href="bootstrap-icons.css" />
     <link rel="stylesheet" href="bootstrap.min.css"> -->
