--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
             <!-- -------------- ABOUT BOX ---------------- -->
             <section class="section" id="about">
                 <div class="top-header">
-                    <h1>About Me</h1>
+                    <h1>About</h1>
                 </div>
                 <div class="row">
                     <div class="col">
                         <div class="about-info">
-                            <h3>About</h3>
+                            <h3>About Me</h3>
                             <p>
                                 As a skilled backend developer, I specialize in creating
                                 robust server-side applications that power modern web
@@ -186,7 +186,7 @@
 
             <section class="section" id="contact">
                 <div class="top-header">
-                    <h1>Get in touch</h1>
+                    <h1>Contact with Me</h1>
                     <span>Do you have a project in your mind, contact me here</span>
                 </div>
 
@@ -194,7 +194,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="contact-info">
-                                <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
+                                <h2>Check Me on <i class="uil uil-corner-right-down"></i></h2>
                                 <p><i class="uil uil-envelope"></i> Email: Tsehay900@gmail.com</p>
                                 <p><i class="uil uil-phone"></i> Tel: +251963790202</p>
                             </div>
@@ -229,7 +229,7 @@
         <!-- --------------- FOOTER --------------- -->
         <footer>
             <div class="top-footer">
-                <p>Tsehay G.</p>
+                <p>*Tsehay Goremes*</p>
             </div>
             <div class="middle-footer">
                 <ul class="footer-menu">
