--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
     <!-- --------- CSS ---------- -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- --------- SUN ---------- -->
-    <link rel="shortcut icon" href="sun.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/image/sun.png" type="image/x-icon">
 
     <title> Tsehay Portfolio </title>
 </head>
