--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- --------- SUN ---------- -->
-    <link rel="shortcut icon" href="/image/sun.png" type="image/x-icon">
+    <link rel="shortcut icon" href="image/sun.png" type="image/x-icon">
 
     <title> Tsehay Portfolio </title>
 </head>
