--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     </div>
                     <div class="featured-text-info">
                         <p>
-                            I'm Tsehay Goremes, a Junior backend developer
-                            and Dajango. I love working on a challenging and innovative
+                            I'm Tsehay Goremes, a Machine Learning Engineer.
+                             I love working on a challenging and innovative
                             project with a great team. I have been working on fields like Machine Learning.
                         </p>
                     </div>
@@ -107,51 +107,76 @@
                         <div class="about-info">
                             <h3>About Me</h3>
                             <p>
-                                As a skilled backend developer, I specialize in creating
-                                robust server-side applications that power modern web
-                                and mobile experiences. Leveraging technologies such as Node.js and Django.
-                                As a frontend developer, I specialize in crafting visually stunning and
-                                user-friendly websites that deliver exceptional user experiences.
-                                I am proficient in frontend technologies such as HTML, CSS, and JavaScript.
+                                As a skilled Machine Learning Engineer, 
+                                I specialize in designing and implementing intelligent 
+                                systems that solve complex real-world problems. 
+                                Leveraging frameworks such as TensorFlow and PyTorch,
+                                I create robust machine learning models for applications ranging 
+                                from natural language processing to computer vision.
+                                My expertise extends to data preprocessing, model training, 
+                                and performance optimization, ensuring the delivery of accurate 
+                                and efficient solutions. I am proficient in programming languages 
+                                such as Python and experienced in using tools like Google Colab and 
+                                Jupyter Notebook to streamline development workflows.
                             </p>
 
                         </div>
                     </div>
                     <div class="col">
-                        <div class="skills-box">
-                            <div class="skills-header">
-                                <h3>Backend</h3>
-                            </div>
-                            <div class="skills-list">
-                                <span>Django</span>
-                                <span>Python</span>
-                                <span>JAVA</span>
-                                <span>C++</span>
-                            </div>
-                        </div>
-                        <div class="skills-box">
-                            <div class="skills-header">
-                                <h3>Frontend</h3>
-                            </div>
-                            <div class="skills-list">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>Bootstrap</span>
-                                <span>JavaScript</span>
-
-
-
-                            </div>
-                        </div>
-                        <div class="skills-box">
-                            <div class="skills-header">
-                                <h3>Database</h3>
-                            </div>
-                            <div class="skills-list">
-                                <span>MySQL</span>
-
-                                <span>MongoDB</span>
-                            </div>
+                       <div class="skills-box">
+    <div class="skills-header">
+        <h3>Machine Learning</h3>
+    </div>
+    <div class="skills-list">
+        <span>TensorFlow</span>
+        <span>PyTorch</span>
+        <span>Scikit-learn</span>
+        <span>Keras</span>
+    </div>
+</div>
+<div class="skills-box">
+    <div class="skills-header">
+        <h3>Programming</h3>
+    </div>
+    <div class="skills-list">
+        <span>Python</span>
+        <span>R</span>
+        <span>C++</span>
+        <span>Java</span>
+    </div>
+</div>
+<div class="skills-box">
+    <div class="skills-header">
+        <h3>Data Processing</h3>
+    </div>
+    <div class="skills-list">
+        <span>Pandas</span>
+        <span>NumPy</span>
+        <span>Matplotlib</span>
+        <span>Seaborn</span>
+    </div>
+</div>
+<div class="skills-box">
+    <div class="skills-header">
+        <h3>Database</h3>
+    </div>
+    <div class="skills-list">
+        <span>SQL</span>
+        <span>MongoDB</span>
+        <span>Google BigQuery</span>
+    </div>
+</div>
+<div class="skills-box">
+    <div class="skills-header">
+        <h3>Cloud & Tools</h3>
+    </div>
+    <div class="skills-list">
+        <span>Google Colab</span>
+        <span>Jupyter Notebook</span>
+        <span>AWS</span>
+        <span>Azure</span>
+    </div>
+</div>
                         </div>
                     </div>
                 </div>
