--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <section class="featured-box" id="home">
                 <div class="featured-image">
                     <div class="image">
-                        <img src="image/photo_2024-10-08_18-17-15.jpg" alt="avatar">
+                        <img src="image/tse.jpg" alt="avatar">
                     </div>
                 </div>
                 <div class="featured-text">
