--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
         <span>R</span>
         <span>C++</span>
         <span>Java</span>
+        <span>JavaScripts</span>
+        <span>React</span>
+        <span>React-Native</span>
+        <span>Flutter</span>
     </div>
 </div>
 <div class="skills-box">
